# website-project

./: .breakpoints  .gitignore  .slider.db  Client_Credentials.py  Dockerfile  README.md  app.yaml  auto_refresher.py  code.txt  daily_task.py  debug.txt  iowa score farm november 2021.json  main.py  match.py  match_Data for ref.txt  match_data.py  match_scores.txt  migrate.py  player_data.json  players.db  pyproject.toml  requirements.txt  scores.txt  team_metadata.py  token_refresher.py  user_match_data  websiteControl.py
crap/: Account.py  AccountList.py  AccountPFPs.py  ApiCall.py  ApiType.py  Backup.py  Initialization.py  JsonHelper.py  PSQLConnection.py  ServerData.py  StatusHandler.py  authentication_crap.py  clan_crap.py  console_interface_crap.py  function_crap.py  gentrys_quest_crap.py  match_crap.py  minecraft_data_crap.py  player_crap.py  team_crap.py
endpoints/: __init__.py
match_history/: sample match.py  sample team match.py  sample_match.py  taco.json
matches/: example match.json  example match.py  example team match.py  iowa score farm november 2021.json  joe.json  osu valley 2021-2022.json  osu valley 2021-2022.py  sample_match.py  tateyama score farm.json
migrations/: 2024_10_25 add id to json.py  2024_11_26_get_rid_mekhi_poop.py  2024_6_29_migrate_account_data_sql.py  2024_7_5_migrate_leaderboard.py
minecraft/: bukkit.yml  eula.txt  fabric-server-launcher.properties  player_data.json  run.bat  server.properties  spigot.yml  user_jvm_args.txt
old mode/: match.py  match_scores.txt
static/: script.js  style.css
templates/: Current.html  (+20 more)
(+98 files in other folders)
