[tool.poetry]
name = "osu-api-crap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
osuapi = "^0.0.42"
pyosu = "^1.1"
aiohttp = "^3.7.3"
slider = "^0.4.0"
numpy = "^1.19.5"
scipy = "^1.6.0"
requests = "^2.25.1"
click = "^7.1.2"
regex = "^2020.11.13"
flask = "^1.1.2"
Flask-Session = "^0.3.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
