[tool.poetry]
name = "repl_python3_osu-api-crap"
version = "0.1.0"
description = ""
authors = ["minecreeper0913 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
lxml = "^4.6.3"
osuapi = "^0.0.43"
selenium = "^3.141.0"
slider = "^0.5.2"
aiohttp = "^3.7.4"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
