[tool.poetry]
name = "website-project"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-SocketIO = "^5.3.1"
numpy = "^1.23.3"
tabulate = "^0.8.10"
Flask-Bcrypt = "^1.0.1"
nbtlib = "^2.0.4"
requests = "^2.28.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
